# ezno

./: Cargo.toml
checker/: Cargo.toml
checker/binary-serialize-derive/: Cargo.toml  macro.rs
checker/src/: diagnostics.rs  lib.rs
checker/src/context/: environment.rs  mod.rs
checker/src/features/: assignments.rs  functions.rs  modules.rs
checker/src/synthesis/: definitions.rs  hoisting.rs  interfaces.rs  type_annotations.rs  variables.rs
checker/src/types/: functions.rs  mod.rs  terms.rs
checker/src/types/generics/: generic_type_parameters.rs
checker/src/utilities/: serialization.rs
f/unified_identifier/src/: lib.rs
parser/: Cargo.toml
parser/src/: generator_helpers.rs  lexer.rs  lib.rs  property_key.rs  variable_fields.rs  visiting.rs
parser/src/declarations/classes/: class_member.rs
parser/src/declarations/import_export/: mod.rs
parser/src/expressions/: arrow_function.rs  assignments.rs  mod.rs
parser/src/types/: interface.rs  mod.rs  type_annotations.rs  unified_identifier.rs
parser/tests/: type_annotations.rs
shared_types/: Cargo.toml
shared_types/src/: serialization.rs
unified_identifier/: Cargo.toml
unified_identifier/src/: lib.rs
