[package]
name = "unified_identifier"
version = "0.1.0"
edition = "2024"

[features]
default = [
  "self-rust-tokenize",
  "serde-serialize",
]
self-rust-tokenize = ["dep:self-rust-tokenize", "source-map/self-rust-tokenize"]
serde-serialize = ["dep:serde"]

[dependencies]
binary-serialize-derive = { path = "../checker/binary-serialize-derive", version = "0.0.3" }
shared_types = {path = "../shared_types" }
source-map = { version = "0.15", features = [
  "serde-serialize",
  "self-rust-tokenize",
] }
self-rust-tokenize = { version = "0.3", optional = true }

serde = { version = "1.0", features = ["derive"], optional = true }
once_cell = "1.21.3"


[lints]
workspace = true
